--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>My ToDoList</title>
+  <meta name="description" content="To Do List App" />
+  <meta name="authors" content="Regis Duflaut-Averty" />
+  <meta name="company" content="Okta" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <!-- widget stuff here -->
