--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="authors" content="Regis Duflaut-Averty" />
   <meta name="company" content="Okta" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <!-- widget stuff here -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- widget import here -->
   <script src="https://global.oktacdn.com/okta-signin-widget/5.9.4/js/okta-sign-in.min.js" type="text/javascript">
   </script>
   <link href="https://global.oktacdn.com/okta-signin-widget/5.9.4/css/okta-sign-in.min.css" type="text/css"
